syntax = "proto3";

service BandwidthReport {
    rpc Report(BandwidthStatistics) returns (ReportResult) {}
}

message BandwidthStatistics{
    repeated BandwidthUsage statistics = 1;
}

message BandwidthUsage {
    string uuid = 1;
    uint64 send_bytes = 2;
    uint64 recv_bytes = 3;
}

message ReportResult {
    int32 code = 1;
}

